# claude-channel-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: one_way.py  permission_relay.py  two_way.py
src/claude_channel/: __init__.py  _channel.py  _types.py
tests/: test_channel.py  test_types.py
