[project]
name = "claude-channel"
version = "0.1.0"
description = "Python SDK for Claude Code Channels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "hidi", email = "alstjq1012@gmail.com" }]
keywords = ["claude", "claude-code", "channels", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["mcp>=1.20.0,<2", "anyio>=4.0.0,<5"]

[project.urls]
Homepage = "https://github.com/kaeba0616/claude-channel-python"
Repository = "https://github.com/kaeba0616/claude-channel-python"
Issues = "https://github.com/kaeba0616/claude-channel-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_channel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio[trio]"]
examples = ["aiohttp>=3.9.0,<4"]
